Add no-sound option and target Java 25